Creado mediante Colaboratory

--- a/Grafica.ipynb
+++ b/Grafica.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOmjczuHhnKYcB/J5pgto0u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,14 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 298
+          "height": 299
         },
         "id": "4MII3ipBA9hd",
-        "outputId": "65773f7d-a274-43e6-eaa6-8bf70220c14b"
+        "outputId": "1eee5ac6-fa0b-495f-fd8e-5e060286303e"
       },
       "outputs": [
         {
@@ -85,38 +84,38 @@
     {
       "cell_type": "code",
       "source": [
-        "df.groupby([\"Card Type\",'City'])[\"Amount\"].sum()"
+        "df.groupby([\"City\",'Card Type'])[\"Amount\"].sum()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "PCsYfXq_SSvv",
-        "outputId": "e6f9dafb-e6e7-416b-a934-8c3a67f8ad74"
+        "outputId": "15019720-e0cd-439a-8900-fbca74952df6"
       },
-      "execution_count": 62,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Card Type  City             \n",
-              "Gold       Achalpur, India      679992\n",
-              "           Adilabad, India       49020\n",
-              "           Adityapur, India     486710\n",
-              "           Adoni, India         630632\n",
-              "           Adoor, India           6536\n",
-              "                                 ...  \n",
-              "Silver     Yemmiganur, India     93961\n",
-              "           Zaidpur, India       161433\n",
-              "           Zamania, India       270749\n",
-              "           Zira, India           98224\n",
-              "           Zunheboto, India     377158\n",
+              "City              Card Type\n",
+              "Achalpur, India   Gold         679992\n",
+              "                  Platinum     178612\n",
+              "                  Signature    547005\n",
+              "                  Silver       201032\n",
+              "Adilabad, India   Gold          49020\n",
+              "                                ...  \n",
+              "Zira, India       Signature    218424\n",
+              "                  Silver        98224\n",
+              "Zirakpur, India   Platinum     549663\n",
+              "Zunheboto, India  Signature     89271\n",
+              "                  Silver       377158\n",
               "Name: Amount, Length: 3104, dtype: int64"
             ]
           },
           "metadata": {},
-          "execution_count": 62
+          "execution_count": 17
         }
       ]
     }
